src/test/deca/context/valid/SansObjet/DeclVar-Mod-int-int-int.deca
// Description:
//    Declaration of a int variable using % operation between a int variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  3; 
    int y = 17; 
    int z = 3 % 17; 
}
