src/test/deca/context/invalid/SansObjet/DeclVar-EQ-int-int-boolean.deca
// Description:
//    Declaration of a int variable using == operation between a int variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  17; 
    boolean y = false; 
    int z = 17 == false; 
}
